@@ -74,7 +74,7 @@ class QueueManager : public Singleton<QueueManager>, public Speaker<QueueManager
 public:
 	/** Add a file to the queue. */
 	void add(const string& aTarget, int64_t aSize, const TTHValue& root, const UserPtr& aUser, 
-		int aFlags = QueueItem::FLAG_RESUME, bool addBad = true) throw(QueueException, FileException);
+		int aFlags = 0, bool addBad = true) throw(QueueException, FileException);
 	/** Add a user's filelist to the queue. */
 	void addList(const UserPtr& aUser, int aFlags, const string& aInitialDir = Util::emptyString) throw(QueueException, FileException);
 	/** Queue a partial file list download */
