@@ -35,6 +35,8 @@
 * Added various sound options (thanks poy)
 * [L#211497] Segment size is automatically chosen depending on speed
 * [L#209876] Added option to completely disable segmented downloads 
+* [L#209885] Fix antifrag not working as it should
+* Anti-frag no longer optional - not using it was broken by segmented downloading
 
 -- 0.705 2008-03-14 --
 * Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
